[package]
name = "transvec"
version = "0.2.2"
edition = "2018"
readme = "README.md"
repository = "https://github.com/frogtd/transvec"
license = "MIT OR Unlicense"
description = "A crate to safely transmute Vecs"
keywords = ["vec", "transmute", "pod"]
categories = ["memory-management"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.7.0"
thiserror = "1.0.25"

[dev-dependencies]
bytemuck_derive = "*" # wild card because its required by bytemuck and i find it highly unlikely that they would change the names
