[package]
name = "transvec"
version = "0.3.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/frogtd/transvec"
license = "MIT OR Unlicense"
description = "A crate to safely transmute Vecs"
keywords = ["vec", "transmute", "pod"]
categories = ["memory-management"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.7"
thiserror = "1.0"

[dev-dependencies]
bytemuck_derive = "1"
