[package]
name = "transvec"
version = "0.3.1"
edition = "2018"
readme = "README.md"
repository = "https://github.com/frogtd/transvec"
license = "MIT OR Unlicense"
description = "A crate to safely transmute Vecs"
keywords = ["vec", "transmute", "pod"]
categories = ["memory-management"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["allocator_api"]
allocator_api = []

[dependencies]
bytemuck = "1.7"